--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,7 @@
         <h1>Typed Pokedex</h1>
         <div id="app"></div>
     </main>
+    <div class="auther">THIS WEB SITE WAS BUILT WITH <a href="https://itshoda.onrender.com">HODIFA</a></div>
     <script src="./js/app.js"></script>
 </body>
 
